--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(CADAnnotatorTool)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
-file(GLOB_RECURSE sources src/*.cpp src/*.hpp)
+file(GLOB_RECURSE sources src/*.cpp src/*.hpp src/libs/*.hpp src/libs/*.cpp)
 
 # Set the path to OpenCASCADE libraries
 set(OpenCASCADE_INCLUDE_DIRS "/usr/local/include/opencascade/")
@@ -16,5 +16,6 @@ if (${OpenCASCADE_FOUND})
 endif()
 
 include_directories(src)
+include_directories(src/libs)
 add_executable(${PROJECT_NAME} ${sources})
 target_link_libraries(${PROJECT_NAME} ${OpenCASCADE_LIBRARIES})
