--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,4 @@ endif()
 include_directories(src)
 include_directories(src/libs)
 add_executable(${PROJECT_NAME} ${sources})
-target_link_libraries(${PROJECT_NAME} ${OpenCASCADE_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${OpenCASCADE_LIBRARIES} -lTKV3d)
